--- a/portfolio/illustration.html
+++ b/portfolio/illustration.html
@@ -2,7 +2,7 @@
 <html class="content-page" lang="en">
 
 <head>
-<!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
 <title>Genevieve Carter</title>
 <link href="css/bootstrap.min.css" rel="stylesheet">
