--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,6 +3,7 @@
 
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
 <title>Genevieve Carter</title>
 <link href="css/bootstrap.min.css" rel="stylesheet">
