Fixed index.html readability

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,7 +3,6 @@
 
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
 <title>Genevieve Carter</title>
 <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -51,7 +50,7 @@
             <div class="row">
                 <div class="col-md-6 col-sm-12 white-bg">
                     <h1 class="page-header">GENEVIEVE CARTER</h1>
-                    <p>Graphic Artist
+                    <p class="subheading">Graphic Artist
                     <b>+</b> Web Dev Student</p>
                     <a href="contact.html"><button class="btn btn-primary contact-button" type="button"><b>Contact me</b></button></a>
                 </div>
