--- a/jeremy/index.html
+++ b/jeremy/index.html
@@ -54,16 +54,16 @@
                         <a class="page-scroll" href="#header">Home</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">Profile</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#music">Music</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Upcoming Gigs</a>
+                        <a class="page-scroll" href="#portfolio">Upcoming Events</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#contact">Enquiries</a>
                     </li>
                 </ul>
             </div>
@@ -89,23 +89,28 @@
        <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About</h2>
+                    <h2 class="section-heading">Profile</h2>
                     <hr class="primary">
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row">
-               <div class="col-lg-6 col-md-12 text-center">
+               <div class="col-lg-5 col-md-12 text-center">
                     <div class="service-box">
                         <img src="img/circle.jpg" class="img-circle" width="300" height="300">
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-12 text-center">
-                    <div class="service-box">
+                <div class="col-lg-7 col-md-12 text-center">
+                    <!--<div class="service-box">-->
                         <i class="fa fa-4x fa-microphone text-primary sr-icons"></i>
-                        <h3>Jeremy is a Vocalist</h3>
-                        <p class="text-muted">Jeremy resides in Brisbane, Australia and is generally a pretty cool guy. He is trained in making <a href="#music" class="page-scroll">mouth noises</a> and has performed at a bunch of places.</p>
+                        <h3>Jeremy Saywell</h3>
+                        <p class="profile-paragraph">Australian baritone Jeremy Saywell recently completed his secondary studies achieving Senior Vocalist of the Year for 3 consecutive years from 2014 to 2016 and completing his Trinity College London Grade 8 singing examination in 2016.</br></br>
+                        From 2014 Jeremy has developed professionally with consistency, having the pleasure of performing as a featured vocalist in Creative Generation State Schools Onstage in 2015 and 2016 that included a crowd-pleasing solo performance of “Come Fly with Me” with the James Morrison Big Band.</br></br>
+                        Jeremy has featured in the Brisbane Lord Mayors Christmas Carols televised on Channel 9 and Sirromet Carols by Candlelight in 2016 under the musical direction of John Foreman. Other local performances include charity and fundraiser events.</br></br>
+                        He is a chorister within the Vocal Manoeuvres Academy chamber ensemble Exaudi Australis and the Queensland Festival Chorus under the guidance of Director Alison Rogers; touring Singapore in 2015 for Mahler’s 8th Symphony and 2016 Beethoven’s 9th Symphony performed at the Esplanade Concert Hall.</br></br>
+                        Jeremy is excited to be attending the King’s Singers Summer School this July 2017 at Royal Holloway, University of London.</p>
+
                     </div>
                 </div>
             </div>
@@ -131,18 +136,18 @@
     <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
-                <h2>Upcoming Gigs</h2>
+                <h2>Upcoming Events</h2>
                 <p>Tivoli - 5 June 2017</p>
                 <p>Brisbane Convention Centre - 30 July 2017</p>
                 <p>Riverstage - 4 August 2017</p>
                 <p>Shady Palms Hotel - 6 August 2017</p>
                 <p>Jack Rabbit Slims - 11 August 2017</p>
-                <a href="#contact" class="btn btn-default btn-xl sr-button page-scroll">Bookings</a>
+                <a href="#contact" class="btn btn-default btn-xl sr-button page-scroll">Enquiries</a>
             </div>
         </div>
     </aside>
 
-    <section id="contact">
+   <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -162,6 +167,8 @@
         </div>
         <div class="text-center footer"><p>Copyright Jeremy Saywell 2017</p></div>
     </section>
+
+    
 
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
