Major changes to portfolio website

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <div class="main-container center-block">
             <section id="about">
                 <h2 class="text-center">About</h2>
-                <p class="text-center intro">Hi, I'm Genevieve! I'm a Web Dev student with a knack for design.
-                    I'm always working on new projects to build on my front end skills.</br>
+                <p class="text-center intro">Hi, I'm Genevieve! I'm a Web Dev student with a knack for design and front end development.
+                    I'm always working on new projects!</br>
                 </p>
 
                 <div class="row">
@@ -83,23 +83,37 @@
             <section id="portfolio">
             <h2 class="text-center">Portfolio</h2>
                 <div class="row">
+                    
                     <div class="col-lg-4 col-md-6">
-                        <img src="img/1.png" class="img-responsive img-circle" alt="Image">
+                       <a href="http://genevieveloreal.github.io/ideal-spoon" target="_blank">
+                            <img src="img/ideal-spoon.png" class="img-responsive img-circle" alt="Ideal Spoon">
+                        </a>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <img src="img/2.png" class="img-responsive img-circle" alt="Image">
+                              <a href="https://genevieveloreal.github.io/paddington-markets/" target="_blank">
+                            <img src="img/paddington-markets.png" class="img-responsive img-circle" alt="Paddington Markets">
+                        </a>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <img src="img/3.png" class="img-responsive img-circle" alt="Image">
+                        <a href="http://genevieveloreal.github.io/brad-vance-photography" target="_blank">
+                            <img src="img/brad-vance-photography.png" class="img-responsive img-circle" alt="Brad Vance Photography">
+                        </a>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <img src="img/4.png" class="img-responsive img-circle" alt="Image">
+                        <a href="https://genevieveloreal.github.io/west-coast-auto-prototype/" target="_blank">
+                            <img src="img/west-coast-auto.png" class="img-responsive img-circle" alt="West Coast Auto">
+                        </a>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <img src="img/5.png" class="img-responsive img-circle" alt="Image">
+                        <a href="#" target="_blank">
+                            <img src="img/bazaar-ceramics.png" class="img-responsive img-circle" alt="Bazaar Ceramics">
+                        </a>
                     </div>
+                    
                     <div class="col-lg-4 col-md-6">
-                        <img src="img/6.png" class="img-responsive img-circle" alt="Image">
+                        <a href="https://genevieveloreal.github.io/random-quote-generator/" target="_blank">
+                           <img src="img/random-quote-generator.png" class="img-responsive img-circle" alt="Random Quote Generator">
+                        </a>
                     </div>
                 </div>
 
@@ -107,6 +121,7 @@
                 <h2 class="text-center">Contact</h2>
                 <div class="contact-content">
                     <img src="img/profile.jpg" class="img-responsive img-circle profile-img" alt="Image">
+                    <p class="chat">Let's chat!</p>
                     <p class="email"><a href="mailto:genevieveloreal@gmail.com">genevieveloreal@gmail.com</a></p>
                     <div class="contact-icons">
                         <a href="http://www.github.com/genevieveloreal"><i class="fa fa-3x fa-github" aria-hidden="true"></i></a>
