--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <a href="#" target="_blank">
+                        <a href="http://www.genevievecarter.com.au/wordpress" target="_blank">
                             <img src="img/bazaar-ceramics.png" class="img-responsive img-circle" alt="Bazaar Ceramics">
                         </a>
                     </div>
