--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class="contact-content">
                     <img src="img/profile.jpg" class="img-responsive img-circle profile-img" alt="Image">
                     <p class="chat">Let's chat!</p>
-                    <p class="email"><a href="mailto:genevieveloreal@gmail.com">genevieveloreal@gmail.com</a></p>
+                    <p class="email"><a href="mailto:genevieve.carter@hotmail.com">genevieve.carter@hotmail.com</a></p>
                     <div class="contact-icons">
                         <a href="http://www.github.com/genevieveloreal"><i class="fa fa-3x fa-github" aria-hidden="true"></i></a>
                         <a href="https://www.linkedin.com/in/genevievec/"><i class="fa fa-3x fa-linkedin" aria-hidden="true"></i></a>
