--- a/index.html
+++ b/index.html
@@ -116,7 +116,19 @@
                         </a>
                     </div>
                 </div>
-
+                <!--<h2 class="text-center illustration">Graphic Art + Illustration</h2>
+                <div class="row">
+                    
+                    <div class="col-lg-4 col-md-6">
+                            <img src="illustration/1.png" class="img-responsive img-circle" alt="Ideal Spoon">
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                            <img src="illustration/2.png" class="img-responsive img-circle" alt="Ideal Spoon">
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                            <img src="illustration/3.png" class="img-responsive img-circle" alt="Ideal Spoon">
+                    </div>
+                </div>-->
             <section id="contact">
                 <h2 class="text-center">Contact</h2>
                 <div class="contact-content">
