Change to webpage title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="MobileOptimized" content="width">
     <meta name="HandheldFriendly" content="true">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>Genevieve L'Oreal - freeCodeCamp</title>
+    <title>Genevieve L'Oreal - Front End Developer</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/normalise.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
