Change to styles

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <section id="about">
                 <h2 class="text-center">About</h2>
                 <p class="text-center intro">Hi, I'm Genevieve! I'm a Web Dev student with a knack for design and front end development.
-                    I'm always working on new projects!</br>
+                    I'm always working on new projects. If you'd like to get in touch please <a href="#contact" class="contact-link">contact me</a>.</br>
                 </p>
 
                 <div class="row">
