Edits to portfolio

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600" rel="stylesheet">
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/solid.css" integrity="sha384-osqezT+30O6N/vsMqwW8Ch6wKlMofqueuia2H7fePy42uC05rm1G+BUPSd2iBSJL" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/fontawesome.css" integrity="sha384-BzCy2fixOYd0HObpx3GMefNqdbA7Qjcc91RgYeDjrHTIEXqiF00jKvgQG0+zY/7I" crossorigin="anonymous">
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
     <!-- Scripts -->
@@ -28,113 +29,127 @@
                 <h1 class="mb-3">Genevieve Carter</h1>
                 <h3 class="mb-5">Front End Developer</h3>
                 <a class="btn btn-primary btn-xl js-scroll-trigger" href="#flight-centre">View Projects</a>
+                <i class="fab fa-github"></i>
             </div>
         </div>
       </div>
       <div class="overlay"></div>
     </header>
-    <div class="container">
+    <div class="outer-container">
         <div class="section" id="flight-centre">
-            <div class="row">
-                <div class="col-lg-6">
-                    <h2>Flight Centre</h2>
-                    <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent auctor massa id nulla ornare, eget congue orci cursus. Morbi nec arcu vel mi porta tincidunt. Aliquam sed enim lacus. Donec pharetra est vel pretium laoreet. Quisque viverra urna turpis, fringilla consequat urna tincidunt at. Etiam placerat nisi at varius efficitur.</p>
-                    <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent auctor massa id nulla ornare, eget congue orci cursus. Morbi nec arcu vel mi porta tincidunt. Aliquam sed enim lacus. Donec pharetra est vel pretium laoreet. Quisque viverra urna turpis, fringilla consequat urna tincidunt at. Etiam placerat nisi at varius efficitur.</p>
-                </div>
-                <div class="col-lg-6 feature">
-                    <img src="images/flight-centre.jpg" class="img-fluid">
-                    <a href="#">View Website</a>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <h2>Flight Centre</h2>
+                        <p>Flight Centre Travel Academy (FCTA) is Flight Centre’s registered training organisation. Their old website needed some love, as it was poorly structured and difficult for students to find relevant information.</p>
+                        
+                        <p>As the key Front End Developer on this project, I developed various modular templates from designs to ensure the client could easily create new pages as their course offerings expanded. I helped implement multiple strong calls to action to help convert visitors to leads and implemented SVG masks within modules to allow the client to change images in a flexible way.</p>
+                    </div>
+                    <div class="col-lg-6 feature">
+                        <a href="https://www.fctravelacademy.com/" target="_blank">
+                            <img src="images/flight-centre.jpg" class="img-fluid">
+                        </a>
+                        <a href="https://www.fctravelacademy.com/" target="_blank">View Website</a>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="section" id="gamify">
-            <div class="row">
-                <div class="col-lg-6">
-                    <h2>Gamify</h2>
-                    <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent auctor massa id nulla ornare, eget congue orci cursus. Morbi nec arcu vel mi porta tincidunt. Aliquam sed enim lacus. Donec pharetra est vel pretium laoreet. Quisque viverra urna turpis, fringilla consequat urna tincidunt at. Etiam placerat nisi at varius efficitur.</p>
-                    <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent auctor massa id nulla ornare, eget congue orci cursus. Morbi nec arcu vel mi porta tincidunt. Aliquam sed enim lacus. Donec pharetra est vel pretium laoreet. Quisque viverra urna turpis, fringilla consequat urna tincidunt at. Etiam placerat nisi at varius efficitur.</p>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <h2>Gamify</h2>
+                        <p>Gamify is a Gamification Marketing leader that helps companies make fun and enaging ‘AdverGames’. After recently partnering with Wix, Gamify identified the need for a website refresh, including the development of a Learning Centre to help educate potential customers about the benefits of gamification.</p>
+                        <p>I developed main pages for this project including the Home page, Partner page, Direct page, Wix page and Learning Centre. The client wanted to be able to display pricing on the Direct page based on the user’s region, while also allowing them the option to change the currency. I created this functionality using HubSpot’s smart content features in conjunction with jQuery and AJAX to get conversion rates from a currency API.</p>
+                    </div>
+                    <div class="col-lg-6 feature">
+                        <a href="https://www.gamify.com/" target="_blank">
+                            <img src="images/gamify-white-bg.jpg" class="img-fluid">
+                        </a>
+                        <a href="https://www.gamify.com/" target="_blank">View Website</a>
+                    </div>
                 </div>
-                <div class="col-lg-6 feature">
-                    <img src="images/gamify.jpg" class="img-fluid">
-                    <a href="#">View Website</a>
+            </div>
+        </div>
+         <div class="section" id="salon-style">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <h2>Salon Style</h2>
+                        <p>Salon Style is an established online retailer of haircare, skincare and beauty products. The redesign of Salon Style’s website required creating a clean, modern and interactive feel to freshen up their online presence. As the key Web Designer and Front End Developer on the project, I performed research into Salon Style’s competitors and worked with the client to understand their customer base.</p>
+                        <p>I was able to identify some key pain points of the client’s customers and suggest improvements regarding navigation, user-flow and product filtering. I created the initial designs for Salon Style and once these were approved I developed the pages in Shopify and also worked with a senior developer to install necessary extensions.</p>
+                    </div>
+                    <div class="col-lg-6 feature">
+                    <a href="https://salonstyle.com.au/" target="_blank">
+                        <img src="images/salon_style.jpg" class="img-fluid">
+                    </a>
+                        <a href="https://salonstyle.com.au/" target="_blank">View Website</a>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="section" id="weploy">
-            <div class="row">
-                <div class="col-lg-6">
-                    <h2>Weploy</h2>
-                    <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent auctor massa id nulla ornare, eget congue orci cursus. Morbi nec arcu vel mi porta tincidunt. Aliquam sed enim lacus. Donec pharetra est vel pretium laoreet. Quisque viverra urna turpis, fringilla consequat urna tincidunt at. Etiam placerat nisi at varius efficitur.</p>
-                    <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent auctor massa id nulla ornare, eget congue orci cursus. Morbi nec arcu vel mi porta tincidunt. Aliquam sed enim lacus. Donec pharetra est vel pretium laoreet. Quisque viverra urna turpis, fringilla consequat urna tincidunt at. Etiam placerat nisi at varius efficitur.</p>
-                </div>
-                <div class="col-lg-6 feature">
-                    <img src="images/weploy.jpg" class="img-fluid">
-                    <a href="#">View Website</a>
-                </div>
-            </div>
-        </div>
-        <div class="section" id="salon-style">
-            <div class="row">
-                <div class="col-lg-6">
-                    <h2>Salon Style</h2>
-                    <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent auctor massa id nulla ornare, eget congue orci cursus. Morbi nec arcu vel mi porta tincidunt. Aliquam sed enim lacus. Donec pharetra est vel pretium laoreet. Quisque viverra urna turpis, fringilla consequat urna tincidunt at. Etiam placerat nisi at varius efficitur.</p>
-                    <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent auctor massa id nulla ornare, eget congue orci cursus. Morbi nec arcu vel mi porta tincidunt. Aliquam sed enim lacus. Donec pharetra est vel pretium laoreet. Quisque viverra urna turpis, fringilla consequat urna tincidunt at. Etiam placerat nisi at varius efficitur.</p>
-                </div>
-                <div class="col-lg-6 feature">
-                    <img src="images/salon_style.jpg" class="img-fluid">
-                    <a href="#">View Website</a>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <h2>Weploy</h2>
+                        <p>Weploy is an online platform and app that connects businesses with pre-screened staff to help fill role vacancies. As Weploy has been gaining traction and increased exposure in the media, they required a new ‘two-sided’ website that would provide them with a vibrant look and channel visitors into the appropriate section of their website.</p>
+                        <p>A challenge faced during development was allowing the client with a sufficient amount of flexibility regarding colours (as they have multiple brand colours), while still making the templates easy to use for a non-developer. I provided training to the client, as well as significant documentation prior to launch to ensure they were comfortable and understood the new configutation of their website.</p>
+                    </div>
+                    <div class="col-lg-6 feature">
+                        <a href="https://www.weployapp.com" target="_blank">
+                            <img src="images/weploy-white-bg.jpg" class="img-fluid">
+                        </a>
+                        <a href="https://www.weployapp.com" target="_blank">View Website</a>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="section" id="bigstone">
-            <div class="row">
-                <div class="col-lg-6">
-                    <h2>Bigstone</h2>
-                    <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent auctor massa id nulla ornare, eget congue orci cursus. Morbi nec arcu vel mi porta tincidunt. Aliquam sed enim lacus. Donec pharetra est vel pretium laoreet. Quisque viverra urna turpis, fringilla consequat urna tincidunt at. Etiam placerat nisi at varius efficitur.</p>
-                    <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent auctor massa id nulla ornare, eget congue orci cursus. Morbi nec arcu vel mi porta tincidunt. Aliquam sed enim lacus. Donec pharetra est vel pretium laoreet. Quisque viverra urna turpis, fringilla consequat urna tincidunt at. Etiam placerat nisi at varius efficitur.</p>
-                </div>
-                <div class="col-lg-6 feature">
-                    <img src="images/bigstone.jpg" class="img-fluid">
-                    <a href="#">View Website</a>
-                </div>
-            </div>
-        </div>
-        <div class="section" id="own-it-conveyancing">
-            <div class="row">
-                <div class="col-lg-6">
-                    <h2>Own It Conveyancing</h2>
-                    <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent auctor massa id nulla ornare, eget congue orci cursus. Morbi nec arcu vel mi porta tincidunt. Aliquam sed enim lacus. Donec pharetra est vel pretium laoreet. Quisque viverra urna turpis, fringilla consequat urna tincidunt at. Etiam placerat nisi at varius efficitur.</p>
-                    <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent auctor massa id nulla ornare, eget congue orci cursus. Morbi nec arcu vel mi porta tincidunt. Aliquam sed enim lacus. Donec pharetra est vel pretium laoreet. Quisque viverra urna turpis, fringilla consequat urna tincidunt at. Etiam placerat nisi at varius efficitur.</p>
-                </div>
-                <div class="col-lg-6 feature">
-                    <img src="images/own_it_conveyancing.jpg" class="img-fluid">
-                    <a href="#">View Website</a>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <h2>Bigstone</h2>
+                        <p>After updating their branding, Bigstone found that their current website did not exactly align with their brand and company direction.</p>
+                        <p>I worked closely with a Senior Developer to identify elements of their current website that could be adapted or refactored, as well as elements that would need to be created from scratch. We were able to fast-track Bigstone's website refresh by leveraging existing work in order to create a fresh and efficient outcome for the client.</p>
+                    </div>
+                    <div class="col-lg-6 feature">
+                        <img src="images/bigstone.jpg" class="img-fluid">
+                        <a href="#">View Website</a>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="section" id="netball-queensland">
-            <div class="row">
-                <div class="col-lg-6">
-                    <h2>Netball Queensland</h2>
-                    <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent auctor massa id nulla ornare, eget congue orci cursus. Morbi nec arcu vel mi porta tincidunt. Aliquam sed enim lacus. Donec pharetra est vel pretium laoreet. Quisque viverra urna turpis, fringilla consequat urna tincidunt at. Etiam placerat nisi at varius efficitur.</p>
-                    <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent auctor massa id nulla ornare, eget congue orci cursus. Morbi nec arcu vel mi porta tincidunt. Aliquam sed enim lacus. Donec pharetra est vel pretium laoreet. Quisque viverra urna turpis, fringilla consequat urna tincidunt at. Etiam placerat nisi at varius efficitur.</p>
-                </div>
-                <div class="col-lg-6 feature">
-                    <img src="images/playnetball_qld.jpg" class="img-fluid">
-                    <a href="#">View Website</a>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <h2>Netball Queensland</h2>
+                        <p>Netball Queensland required a new website their Play Netball Queensland initiative and media campaign. The campaign aims to support and encourage young girls of all ages to get active and participate in netball. The client brief was to create a website that was fun, fresh, young and not too girly. The website needed to be welcoming, encouraging and informative. I worked closely with the client to discuss their goals and desired layout. I then created detailed mockups in photoshop which were approved for development by the client. I created the website in WordPress from the mockups and implemented small changes prior to launch as requested.</p>
+                    </div>
+                    <div class="col-lg-6 feature">
+                        <a href="https://playnetballqld.com.au/" target="_blank">
+                            <img src="images/netball-qld-white-bg.jpg" class="img-fluid">
+                        </a>
+                        <a href="https://playnetballqld.com.au/" target="_blank">View Website</a>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="section" id="polymorph-games">
-            <div class="row">
-                <div class="col-lg-6">
-                    <h2>Polymorph Games</h2>
-                    <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent auctor massa id nulla ornare, eget congue orci cursus. Morbi nec arcu vel mi porta tincidunt. Aliquam sed enim lacus. Donec pharetra est vel pretium laoreet. Quisque viverra urna turpis, fringilla consequat urna tincidunt at. Etiam placerat nisi at varius efficitur.</p>
-                    <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent auctor massa id nulla ornare, eget congue orci cursus. Morbi nec arcu vel mi porta tincidunt. Aliquam sed enim lacus. Donec pharetra est vel pretium laoreet. Quisque viverra urna turpis, fringilla consequat urna tincidunt at. Etiam placerat nisi at varius efficitur.</p>
-                </div>
-                <div class="col-lg-6 feature">
-                    <img src="images/polymorph_games.jpg" class="img-fluid">
-                    <a href="#">View Website</a>
+        <div class="section" id="own-it-conveyancing">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <h2>Own It Conveyancing</h2>
+                        <p>Own It Conveyancing is a major conveyancing firm primarily aimed at first home owners. The client wanted to refresh their old website and provide an easy experience for their users, most of which primarily visit the website on mobile.</p>
+                        <p>I worked with the client to design and develop a professional, easy to use WordPress website that they could maintain and update. I worked with a Senior Developer to create the 'Free Quote' functionality and usability.</p>
+                    </div>
+                    <div class="col-lg-6 feature">
+                        <a href="https://ownitconveyancing.com/">
+                            <img src="images/own_it_conveyancing.jpg" class="img-fluid">
+                        </a>
+                        <a href="https://ownitconveyancing.com/">View Website</a>
+                    </div>
                 </div>
             </div>
         </div>
