--- a/index.html
+++ b/index.html
@@ -23,13 +23,12 @@
       <div class="container my-auto">
         <div class="row">
             <div class="col-lg-5">
-                <img src="images/portrait_v2.jpg" class="img-fluid" style="border-radius: 50%; max-width: 350px;">
+                <img src="images/portrait_v2.jpg" class="img-fluid portrait">
             </div>
             <div class="col-lg-7">
                 <h1 class="mb-3">Genevieve Carter</h1>
                 <h3 class="mb-5">Front End Developer</h3>
                 <a class="btn btn-primary btn-xl js-scroll-trigger" href="#flight-centre">View Projects</a>
-                <i class="fab fa-github"></i>
             </div>
         </div>
       </div>
