--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
     <!-- Scripts -->
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="js/smooth-scroll.js"></script>
   </head>
   <body>
